# ImStat

./: .gitignore  CMakeLists.txt  README.md
octave/: tp1.m  tp2.m  tp3.m  tp3_EM.m  tp3_kmeans.m
rapports/: rapport_tp1.md  rapport_tp2.md  rapport_tp3.md
src/: tp1.cpp
